openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-loan-deployment
  labels:
    app: bank-loan-deployment
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: bank-loan-deployment

# Made with Bob
