openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bank-loan-deployment
  labels:
    app: bank-loan-deployment
spec:
  to:
    kind: Service
    name: bank-loan-deployment
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

# Made with Bob
